core: cleanup